add cache managment

--- a/composer.json
+++ b/composer.json
@@ -60,8 +60,10 @@
         "laravel": {
             "providers": [
                 "Wikichua\\Dashing\\DashingServiceProvider",
+                "Wikichua\\Dashing\\Providers\\EventServiceProvider",
                 "Wikichua\\Dashing\\Providers\\HelpServiceProvider",
                 "Wikichua\\Dashing\\Providers\\BrandServiceProvider",
+                "Wikichua\\Dashing\\Providers\\CollectionPaginationServiceProvider",
                 "Wikichua\\Dashing\\Providers\\ValidatorServiceProvider"
             ],
             "aliases": {
