--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "@popperjs/core": "^2.9.2",
         "autoprefixer": "^10.2.5",
         "axios": "^0.21.1",
-        "bootstrap": "^5.0.0-beta3",
+        "bootstrap": "^5.0.1",
         "bootstrap-daterangepicker": "^3.1.0",
         "bootstrap-table": "^1.18.3",
         "daterangepicker": "^3.1.0",
