--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,8 @@
         "psr/cache": "^1.0",
         "diglactic/laravel-breadcrumbs": "^6.1",
         "amnuts/opcache-gui": "^3.2",
-        "laravel/ui": "^3.2"
+        "laravel/ui": "^3.2",
+        "spatie/laravel-collection-macros": "@dev"
     },
     "require-dev": {
         "phpunit/phpunit": "~9.0",
