--- a/composer.json
+++ b/composer.json
@@ -11,36 +11,36 @@
     "homepage": "https://github.com/wikichua/dashing",
     "keywords": ["Laravel", "Dashing"],
     "require": {
+        "ably/ably-php": "^1.1",
+        "amnuts/opcache-gui": "^3.3",
+        "arcanedev/laravel-markdown": "^5.1",
+        "barryvdh/laravel-debugbar": "^3.6",
+        "diglactic/laravel-breadcrumbs": "^7.0",
+        "doctrine/cache": "^2.1",
         "illuminate/support": "^8.61",
+        "intervention/imagecache": "^2.5",
+        "jenssegers/agent": "^2.6",
+        "lab404/laravel-impersonate": "^1.7",
         "laravel/breeze": "^1.4",
-        "pusher/pusher-php-server": "^7.0",
-        "predis/predis": "^1.1",
         "laravel/helpers": "^1.4",
         "laravel/sanctum": "^2.11",
         "laravel/socialite": "^5.2",
-        "lab404/laravel-impersonate": "^1.7",
-        "rap2hpoutre/laravel-log-viewer": "^1.7",
-        "rap2hpoutre/fast-excel": "^3.0",
-        "tightenco/ziggy": "^1.4",
-        "barryvdh/laravel-debugbar": "^3.6",
-        "paragonie/sodium_compat": "^1.17",
-        "lionix/seo-manager": "^1.4",
-        "intervention/imagecache": "^2.5",
-        "realrashid/sweet-alert": "^4.0",
-        "arcanedev/laravel-markdown": "^5.1",
-        "spatie/async": "^1.5",
-        "doctrine/cache": "^2.1",
-        "jenssegers/agent": "^2.6",
-        "spatie/laravel-honeypot": "^4.0",
-        "spatie/image-optimizer": "^1.4",
-        "spatie/laravel-image-optimizer": "^1.6",
-        "spatie/laravel-database-mail-templates": "^3.4",
-        "ably/ably-php": "^1.1",
-        "psr/cache": "^3.0",
-        "diglactic/laravel-breadcrumbs": "^7.0",
-        "amnuts/opcache-gui": "^3.3",
         "laravel/ui": "^3.3",
-        "spatie/laravel-collection-macros": "^7.4"
+        "lionix/seo-manager": "^1.4",
+        "paragonie/sodium_compat": "^1.17",
+        "predis/predis": "^1.1",
+        "psr/cache": "^3.0",
+        "pusher/pusher-php-server": "^7.0",
+        "rap2hpoutre/fast-excel": "^3.0",
+        "rap2hpoutre/laravel-log-viewer": "^1.7",
+        "realrashid/sweet-alert": "^4.0",
+        "spatie/async": "^1.5",
+        "spatie/image-optimizer": "^1.4",
+        "spatie/laravel-collection-macros": "^7.4",
+        "spatie/laravel-database-mail-templates": "^3.4",
+        "spatie/laravel-honeypot": "^4.0",
+        "spatie/laravel-image-optimizer": "^1.6",
+        "tightenco/ziggy": "^1.4"
     },
     "require-dev": {
         "phpunit/phpunit": "~9.0",
